--- a/torch_nn_and_cuda.ipynb
+++ b/torch_nn_and_cuda.ipynb
@@ -260,7 +260,7 @@
         "  imshow(torchvision.utils.make_grid(images))\n",
         "  print('GroundTruth: ', ' '.join('%5s' % classes[labels[j]]\n",
         "                    for j in range(4)))\n",
-        "  outputs = net(images)\n",
+        "  outputs = net(images.to(device))\n",
         "  _, predicted = torch.max(outputs, 1)\n",
         "  print('Predicted: ', ' '.join('%5s' % classes[predicted[j]]\n",
         "                  for j in range(4)))"
