--- a/笔记.md
+++ b/笔记.md
@@ -1,4 +1,6 @@
-# Goroutine可能的切换点
+# Go notes
+
+## Goroutine可能的切换点
 
 ```Go
 + I/O, select
@@ -9,3 +11,5 @@
 ```
 
 只是参考，不能保证切换，不能保证在其他地方不切换
+
+## Channel 必须要有发送者和接收者
