--- a/笔记.md
+++ b/笔记.md
@@ -13,3 +13,11 @@
 只是参考，不能保证切换，不能保证在其他地方不切换
 
 ## Channel 必须要有发送者和接收者
+
+## 使用select进行调度
+
+- select的使用
+- 定时器的使用
+- 在select中使用nil channel
+
+参考代码：`learn/select/select.go`
