增加同步机制的例子

--- a/笔记.md
+++ b/笔记.md
@@ -16,8 +16,16 @@
 
 ## 使用select进行调度
 
+### CSP模型
+
 - select的使用
 - 定时器的使用
 - 在select中使用nil channel
 
-参考代码：`learn/select/select.go`
+参考代码：`learn/select/select.go`  <==>  CSP模型
+
+### Go的传统同步机制
+
+- WaitGroup
+- Mutex
+- Cond
