reorganized code files

--- a/笔记.md
+++ b/笔记.md
@@ -29,3 +29,16 @@
 - WaitGroup
 - Mutex
 - Cond
+
+## Go的库
+
+- http, httputil
+- bufio
+- log
+- encoding/json
+- regexp
+- time
+- strings/strconv
+- ...
+
+[学习资料](https://studygolang.com/pkgdoc)
